@@ -21,7 +21,7 @@ dump_cxstack()
     case CXt_FORMAT:
     case CXt_SUB:
         printf("***\n* cx stack %d\n", (int)i);
-        sv_dump((SV*)cx->blk_sub.cv); 
+        sv_dump((SV*)cx->blk_sub.cv);
     }
   }
   return i;
@@ -59,7 +59,7 @@ STATIC OP* unwind_return (pTHX_ OP *op, void *user_data) {
 
   // call_pv("Scope::Upper::unwind", G_VOID);
   // Can't use call_sv et al. since it resets PL_op.
- 
+
   unwind = get_cv("Scope::Upper::unwind", 0);
   XPUSHs( (SV*)unwind);
   PUTBACK;
@@ -69,7 +69,7 @@ STATIC OP* unwind_return (pTHX_ OP *op, void *user_data) {
 
 // Hook the OP_RETURN iff we are in hte same file as originally compiling.
 STATIC OP* check_return (pTHX_ OP *op, void *user_data) {
-  
+
   const char* file = SvPV_nolen( (SV*)user_data );
   const char* cur_file = CopFILE(&PL_compiling);
   if (strcmp(file, cur_file))
@@ -82,7 +82,7 @@ MODULE = TryCatch PACKAGE = TryCatch::XS
 
 PROTOTYPES: DISABLE
 
-void 
+void
 install_return_op_check()
   CODE:
     // Code stole from Scalar::Util::dualvar
@@ -120,7 +120,13 @@ SV* id
     //SvREFCNT_dec( id );
   OUTPUT:
 
+void dump_stack()
+  CODE:
+    dump_cxstack();
+  OUTPUT:
+
 BOOT:
-  if (getenv ("TRYCATCH_DEBUG")) {
+  char *debug = getenv ("TRYCATCH_DEBUG");
+  if (debug && atoi(debug) >= 2) {
     trycatch_debug = 1;
   }
